Increasing the contrast of the hover background for the buttons in the dark mode - BUG ID -1513414

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -13,7 +13,7 @@ button {
 
 button:hover,
 button:focus {
-  background-color: var(--theme-toolbar-background-hover);
+  background-color: var(--theme-toolbar-hover);
 }
 
 .debugger {
