--- a/src/components/shared/Button/styles/CommandBarButton.css
+++ b/src/components/shared/Button/styles/CommandBarButton.css
@@ -20,7 +20,7 @@
 }
 
 .command-bar-button:not(.disabled):hover {
-  background: var(--theme-toolbar-background-hover);
+  background: var(--theme-toolbar-hover);
 }
 
 :root.theme-dark .command-bar-button {
